<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Chinese Flashcards</string>
    <string name="hint">Number of Questions</string>
    <string name="quiz_meaning">Quiz for Meanings</string>
    <string name="quiz_pinyin">Quiz for Pinyin</string>
    <string name="quiz_character">Quiz for Characters</string>
    <string name="quiz_random">Random Quiz</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="correct">Answer Correct!</string>
    <string name="wrong">Answer Wrong!</string>
    <string name="next">next</string>
    <string name="restart">Restart</string>
    <string name="rate0">Good luck next time!</string>
    <string name="rate1">Good job!</string>
    <string name="rate2">Excellent work!</string>
    <string name="result"><xliff:g id="quantity" example="2">%d</xliff:g>/<xliff:g id="quantity" example="5">%d</xliff:g></string>
</resources>
