<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.example.lkwan.chineseflashcards.MainActivity">

    <EditText
        android:id="@+id/question_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/board_margin"
        android:hint="@string/hint"
        android:inputType="number" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_meanings">

        <TextView
            android:id="@+id/quiz_meaning"
            style="@style/CategoryStyle"
            android:text="@string/quiz_meaning" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_characters">

        <TextView
            android:id="@+id/quiz_character"
            style="@style/CategoryStyle"
            android:text="@string/quiz_character" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_pinyin">

        <TextView
            android:id="@+id/quiz_pinyin"
            style="@style/CategoryStyle"
            android:text="@string/quiz_pinyin" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_random">

        <TextView
            android:id="@+id/quiz_random"
            style="@style/CategoryStyle"
            android:text="@string/quiz_random" />
    </FrameLayout>

</LinearLayout>
