<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.example.lkwan.chineseflashcards.QuizActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:textAppearance="?android:textAppearanceLarge" />

        <ImageButton
            android:id="@+id/next_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/board_margin"
            android:layout_marginRight="@dimen/board_margin"
            android:contentDescription="@string/next"
            android:onClick="onClickNext"
            android:src="@drawable/ic_next" />
    </RelativeLayout>


    <LinearLayout style="@style/row_choices">

        <FrameLayout style="@style/choice_frame">

            <Button
                android:id="@+id/choice1"
                style="@style/choice" />
        </FrameLayout>

        <FrameLayout style="@style/choice_frame">

            <Button
                android:id="@+id/choice2"
                style="@style/choice" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/row_choices"
        android:paddingBottom="@dimen/board_margin">

        <FrameLayout style="@style/choice_frame">

            <Button
                android:id="@+id/choice3"
                style="@style/choice" />
        </FrameLayout>

        <FrameLayout style="@style/choice_frame">

            <Button
                android:id="@+id/choice4"
                style="@style/choice" />
        </FrameLayout>
    </LinearLayout>

    <!-- Like and Dislike Buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/dislike"
            style="@style/satisfaction"
            android:background="@color/dislike"
            android:contentDescription="@string/dislike"
            android:onClick="onClickDislike"
            android:src="@drawable/ic_dissatisfied" />

        <ImageButton
            android:id="@+id/like"
            style="@style/satisfaction"
            android:background="@color/like"
            android:contentDescription="@string/like"
            android:onClick="onClickLike"
            android:src="@drawable/ic_satisfied" />

    </LinearLayout>

</LinearLayout>
